feat: 整理使用文档和必要的代码注解

--- a/src/assets/css/public/components/el-button-edit.less
+++ b/src/assets/css/public/components/el-button-edit.less
@@ -16,7 +16,7 @@
     }
 }
 // #auth,#message{
-.omc-common-css{
+.common-css{
 
     .el-table{
         td:last-child,td:first-child,td:nth-child(2){
