--- a/src/assets/css/public/components/table.less
+++ b/src/assets/css/public/components/table.less
@@ -4,7 +4,7 @@
 @main-font-color: #333333;
 @font-hover-color: #618afd;
 @font-active-color: #2a58dc;
-.omc-common-css, .el-dialog__body{
+.common-css, .el-dialog__body{
   .el-table {
     position: relative;
     font-size: 12px;
